--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,31 @@ button:focus {
     width: 98%;
 }
 
+/* Feature Section */
 
+.feature-section {
+    text-align: center;
+    padding: 6em 0;
+}
+
+.article {
+    margin-bottom: 7em;
+}
+
+.feature-img {
+    width: 4.5em;
+}
+
+.feature-title {
+    margin: 1.5em 0 0.8em;
+}
+
+.feature-content {
+    line-height: 1.6;
+}
+
+
+/* Service Section */
 
 
 
