--- a/styles/style.css
+++ b/styles/style.css
@@ -114,12 +114,18 @@ button:focus {
 /* Feature Section */
 
 .feature-section {
+    display: flex;
+    flex-direction: column;
     text-align: center;
     padding: 6em 0;
 }
 
 .article {
     margin-bottom: 7em;
+}
+
+.article:last-child {
+    margin-bottom: 0;
 }
 
 .feature-img {
@@ -136,6 +142,37 @@ button:focus {
 
 
 /* Service Section */
+
+.service-section {
+    padding: 6em 0 8em;
+}
+
+.service-section-img {
+    width: 100%;
+}
+
+.service-section-title {
+    font-size: 1.1rem;
+    margin: 2em 0 1em;
+}
+
+.service-section-content {
+    line-height: 1.6;
+    margin: 1em 0;
+}
+
+.service-section-btn {
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    column-gap: 0.5em;
+
+    color: var(--gradient-cyan);
+    text-decoration: none;
+    font-size: 0.8rem;
+    padding: 0 0 0.4em;
+    border-bottom: 1px solid var(--gradient-cyan);
+}
 
 
 
