--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,11 @@ body {
 
 h1, h2, h3, button, li {
     font-family: 'Raleway', sans-serif;
+    padding: 0;
+    margin: 0;
 }
+
+
 
 button {
     padding: 1em 6em;
@@ -178,6 +182,35 @@ button:focus {
 
 /* Testimonial Section */
 
+.open-quote {
+    width: 2em;
+}
+
+.testimonial-article {
+    font-size: 0.75rem;
+    background-color: var(--testimonials-bg);
+    padding: 2.5em 2em;
+    line-height: 1.8;
+    border-radius: 5px;
+    margin-bottom: 2.5em;
+}
+
+.person {
+    display: flex;
+    column-gap: 1em;
+    align-items: center;
+    margin-top: 1em;
+}
+
+.person-img {
+    width: 12%;
+    height: 12%;
+    border-radius: 50%;
+}
+
+.person-designation {
+    font-weight: 400;
+}
 
 
 
